# Color-Buckets-Sorting

./: .gitignore  CMakeLists.txt  README.md  readme.txt
doc/: Doxyfile
include/: Constants.hpp  Data_Generator.hpp  alg_sort.hpp  constants.hpp  data_generator.hpp  robot.h  robot.hpp  utils.hpp
src/: Data_Generator.cpp  aal.cpp  alg_sort.cpp  data_generator.cpp  main.cpp  robot.cpp  utils.cpp
tests/: UnitTests.cpp  test.py  unit_tests.cpp
